<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/tmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_Submit"
            android:background="?android:attr/colorPrimary"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="?attr/switchTextColorCustom"
                android:text="@string/gameSetting_saveAp" />

            <EditText
                android:id="@+id/et_apLimit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/colorText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="?attr/switchTextColorCustom"
                android:text="@string/gameSetting_saveTKT_RECRUIT" />

            <EditText
                android:id="@+id/et_ktkLimit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/colorText"/>
        </LinearLayout>

        <Switch
            android:id="@+id/sw_recruitBot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="?attr/switchTextColorCustom"
            android:text="@string/gameSetting_recruitBot" />

        <Switch
            android:id="@+id/sw_hostBattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="?attr/switchTextColorCustom"
            android:text="@string/gameSetting_hostBattle" />

        <Switch
            android:id="@+id/sw_changeShift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="?attr/switchTextColorCustom"
            android:text="@string/gameSetting_changeShift" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="设置无人机加速房间"
                android:textColor="?attr/switchTextColorCustom" />

            <Spinner
                android:id="@+id/sp_accelerateSlot_CN"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:entries="@array/accelerateSlot_CN_type"
                android:gravity="end"
                android:spinnerMode="dialog"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_battleMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="120dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/gameSetting_search"
                android:singleLine="true"
                android:textColor="@color/colorText"/>

            <Button
                android:id="@+id/bt_search"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="?android:attr/colorPrimary"
                android:text="@string/text_Search" />
        </LinearLayout>


    </LinearLayout>

<!--    别吧这个嵌套进去了，显示不全的-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_battleSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tmp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
