<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/tmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_platform" />

            <Spinner
                android:id="@+id/dg_sp_platform"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/platform"
                android:gravity="end"
                android:spinnerMode="dropdown"
                android:textAlignment="textEnd" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user" />

            <EditText
                android:id="@+id/dg_et_user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/userAccountHintText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password" />

            <EditText
                android:id="@+id/dg_et_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/passwordHintText"
                android:inputType="textPassword" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="60dp"
            android:layout_height="40dp"
            android:orientation="horizontal">
<!--            对话框中不能用空view-->
<!--            <view-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="2" />-->

            <Button
                android:id="@+id/dg_bt_cancel"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="100dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/bg_ripple_round3"
                android:text="取消" />

<!--            <view-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="2" />-->

            <Button
                android:id="@+id/dg_bt_submit"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"

                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_ripple_round2"
                android:text="确认" />
<!--            <view-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="2" />-->
        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>